<?xml version="1.0"?>
<package format="2">
  <name>sensehat_driver</name>
  <version>0.0.0</version>
  <description>A ROS driver for the Raspberry Pi Sense HAT.</description>

  <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>
  <author email="joeyyang.ai@gmail.com">Joey Yang</author>

  <license>BSD</license>

  <url type="website">https://joeyjyyang.github.io</url>
  <url type="github">https://github.com/joeyjyyang</url>
  <url type="repository">https://github.com/joeyjyyang/sensehat_driver</url>
  <url type="linkedin">https://www.linkedin.com/in/joey-yang</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
 
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
